--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Sardar Mubashir Ali",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
