--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/nodemailer": "^6.4.6",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0"
   }
 }
