--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "experimentalDecorators": true
-
+    "experimentalDecorators": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   }
 }
